--- a/resources.html
+++ b/resources.html
@@ -81,55 +81,24 @@
         <!-- Categories Grid -->
         <div class="grid md-grid-cols-2 gap-6"
             style="margin-bottom: 4rem; margin-top: -1.5rem; position: relative; z-index: 20;">
-            <!-- 10 Essentials Card -->
+
+            <!-- Advancement Card -->
             <div class="card" style="padding: 1.75rem; text-align: center;">
                 <div
                     style="width: 3.5rem; height: 3.5rem; background: rgba(17,212,17,0.1); border-radius: 1rem; display: flex; align-items: center; justify-content: center; color: var(--primary); margin: 0 auto 1.5rem;">
                     <span class="material-symbols-outlined"
-                        style="font-size: 1.75rem; font-variation-settings: 'FILL' 1;">backpack</span>
+                        style="font-size: 1.75rem; font-variation-settings: 'FILL' 1;">military_tech</span>
                 </div>
-                <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">10 Essentials</h3>
+                <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">Advancement Info</h3>
                 <p style="color: var(--slate-500); font-size: 0.8125rem; margin-bottom: 1.5rem; line-height: 1.5;">
-                    The survival items every scout must carry on every outdoor adventure.</p>
-                <a href="resources/ten-essentials.html"
+                    Ranks, Board of Reviews, and the path to Eagle Scout.</p>
+                <a href="resources/advancement.html"
                     style="color: var(--primary); font-weight: 700; font-size: 0.8125rem; display: inline-flex; align-items: center; gap: 0.4rem;">
-                    Browse Essentials <span class="material-symbols-outlined"
+                    Guide to Rank <span class="material-symbols-outlined"
                         style="font-size: 1.125rem;">arrow_forward</span>
                 </a>
             </div>
-            <!-- Checklists Card -->
-            <div class="card" style="padding: 1.75rem; text-align: center;">
-                <div
-                    style="width: 3.5rem; height: 3.5rem; background: rgba(17,212,17,0.1); border-radius: 1rem; display: flex; align-items: center; justify-content: center; color: var(--primary); margin: 0 auto 1.5rem;">
-                    <span class="material-symbols-outlined"
-                        style="font-size: 1.75rem; font-variation-settings: 'FILL' 1;">checklist</span>
-                </div>
-                <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">Camping Lists</h3>
-                <p style="color: var(--slate-500); font-size: 0.8125rem; margin-bottom: 1.5rem; line-height: 1.5;">
-                    Packing lists for summer camp and weekend troop trips.</p>
-                <a href="resources/packing-list.html"
-                    style="color: var(--primary); font-weight: 700; font-size: 0.8125rem; display: inline-flex; align-items: center; gap: 0.4rem;">
-                    View Packing List <span class="material-symbols-outlined"
-                        style="font-size: 1.125rem;">arrow_forward</span>
-                </a>
-            </div>
-            <!-- Merit Badge Card -->
-            <div class="card" style="padding: 1.75rem; text-align: center;">
-                <div
-                    style="width: 3.5rem; height: 3.5rem; background: rgba(17,212,17,0.1); border-radius: 1rem; display: flex; align-items: center; justify-content: center; color: var(--primary); margin: 0 auto 1.5rem;">
-                    <span class="material-symbols-outlined"
-                        style="font-size: 1.75rem; font-variation-settings: 'FILL' 1;">verified</span>
-                </div>
-                <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">Join Troop 93</h3>
-                <p style="color: var(--slate-500); font-size: 0.8125rem; margin-bottom: 1.5rem; line-height: 1.5;">
-                    Adventure
-                    awaits! Learn how to become a member of Troop 93.</p>
-                <a href="resources/join-bsa.html"
-                    style="color: var(--primary); font-weight: 700; font-size: 0.8125rem; display: inline-flex; align-items: center; gap: 0.4rem;">
-                    Join the Adventure <span class="material-symbols-outlined"
-                        style="font-size: 1.125rem;">arrow_forward</span>
-                </a>
-            </div>
+
             <!-- Volunteer Discounts Card -->
             <div class="card" style="padding: 1.75rem; text-align: center;">
                 <div
@@ -158,6 +127,53 @@
             </div>
 
             <div class="grid md-grid-cols-2 gap-4">
+                <!-- 10 Essentials -->
+                <div class="card flex items-center justify-between" style="padding: 1rem 1.5rem;">
+                    <div class="flex items-center gap-4">
+                        <div
+                            style="width: 2.5rem; height: 2.5rem; background: rgba(17,212,17,0.1); color: var(--primary); border-radius: 0.5rem; display: flex; align-items: center; justify-content: center; flex-shrink: 0;">
+                            <span class="material-symbols-outlined" style="font-size: 1.5rem;">backpack</span>
+                        </div>
+                        <div>
+                            <h4 style="font-size: 0.9375rem; margin-bottom: 0.1rem;">10 Essentials</h4>
+                            <p style="font-size: 0.75rem; color: var(--slate-500);">Survival items</p>
+                        </div>
+                    </div>
+                    <a href="resources/ten-essentials.html" class="btn-primary"
+                        style="padding: 0.5rem 1rem; font-size: 0.75rem;">View</a>
+                </div>
+
+                <!-- Camping Lists -->
+                <div class="card flex items-center justify-between" style="padding: 1rem 1.5rem;">
+                    <div class="flex items-center gap-4">
+                        <div
+                            style="width: 2.5rem; height: 2.5rem; background: rgba(17,212,17,0.1); color: var(--primary); border-radius: 0.5rem; display: flex; align-items: center; justify-content: center; flex-shrink: 0;">
+                            <span class="material-symbols-outlined" style="font-size: 1.5rem;">checklist</span>
+                        </div>
+                        <div>
+                            <h4 style="font-size: 0.9375rem; margin-bottom: 0.1rem;">Camping Packing Lists</h4>
+                            <p style="font-size: 0.75rem; color: var(--slate-500);">Summer & weekend trips</p>
+                        </div>
+                    </div>
+                    <a href="resources/packing-list.html" class="btn-primary"
+                        style="padding: 0.5rem 1rem; font-size: 0.75rem;">View</a>
+                </div>
+
+                <!-- Fillable Blue Card -->
+                <div class="card flex items-center justify-between" style="padding: 1rem 1.5rem;">
+                    <div class="flex items-center gap-4">
+                        <div
+                            style="width: 2.5rem; height: 2.5rem; background: #e0f2fe; color: #0284c7; border-radius: 0.5rem; display: flex; align-items: center; justify-content: center; flex-shrink: 0;">
+                            <span class="material-symbols-outlined" style="font-size: 1.5rem;">edit_document</span>
+                        </div>
+                        <div>
+                            <h4 style="font-size: 0.9375rem; margin-bottom: 0.1rem;">Merit Badge Blue Card</h4>
+                            <p style="font-size: 0.75rem; color: var(--slate-500);">Fillable PDF</p>
+                        </div>
+                    </div>
+                    <a href="assets/Form-Fillable-Blue-Card.pdf" target="_blank" class="btn-primary"
+                        style="padding: 0.5rem 1rem; font-size: 0.75rem;">Download</a>
+                </div>
                 <!-- Annual Health & Medical Record -->
                 <div class="card flex items-center justify-between" style="padding: 1rem 1.5rem;">
                     <div class="flex items-center gap-4">
